    - cache/package:
      - When throwing away a duplicate version with different hash sums, show
        also left origins in the warning message.
    - system/resolvers/native:
      - Score calculation: for removals of packages which are not manually
        installed, apply also the 'removal-of-autoinstalled' score.
    - cache:
      - Constructor: don't parse release files more than once.
   - Don't include a not exported header from cupt/common.hpp, making a
     development binary package usable again. Fixes a regression since
     2.3.0~rc1.
   - Remove accidentally included 'using std::string' from a global namespace.
     Fixes a regression since 2.3.0~rc1.
  * downloadmethods:
    - wget:
      - Use threads instead of explicit fork()s.
  * debian:
    - libcupt2-0.shlibs: added with an initial value of 2.3.0~rc1.
    - shlibs.local: added as an alias to above.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 02 Feb 2012 11:26:19 +0200

cupt (2.4.0) unstable; urgency=low

  * Switched the compiler from g++ 4.5 to g++ 4.6.
    - The compiler now can generate trivial move-constructors itself.
      Patch by Jonathan Nieder. (Closes: #647142)
  * console:
    - 'policy', 'policysrc':
      - New option '--show-dates'.
    - 'show':
      - Don't output 'Description-md5' field.
    - New subcommand 'iii'.
    - Actions preview:
      - Don't show size changes for 'not preferred' group.
      - Don't show reasons for 'not preferred' group.
    - Managing packages:
      - New option '--show-archives'.
      - New option '--show-codenames'.
      - New option '--show-components'.
      - New option '--show-vendors'.
    - 'search':
      - Switch off processing index translations in 'names-only' mode.
  * lib:
    - config:
      - The option 'cupt::resolver::score::position-penalty' now defaults to
        -2 (was -20).
      - Adjusted default values of options
        'cupt::resolver::score::{new,removal,quality-adjustment}' for changes