@@ -425,7 +425,8 @@ shared_ptr< ReleaseInfo > CacheImpl::getReleaseInfo(const Config& config, const 
 	auto& cachedValue = insertResult.first->second;
 	if (insertResult.second)
 	{
-		cachedValue = cachefiles::getReleaseInfo(config, path);
+		auto alias = indexEntry.uri + ' ' + indexEntry.distribution;
+		cachedValue = cachefiles::getReleaseInfo(config, path, alias);
 		cachedValue->verified = cachefiles::verifySignature(config, path);
 	}
 	if (!cachedValue)
